--- a/Checkout.html
+++ b/Checkout.html
@@ -12,49 +12,43 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Purr & Pour Cafe</title>
   </head>
 
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg" style="background-color: #ffffff;">
             <div class="container-fluid">
-              <a class="navbar-brand text-white" href="#"></a>
+                <a class="navbar-brand" href="index.html" style="color: #6f3c08;"; padding-left: 20px; padding-top: 1rem;">Purr & Pour Cafe</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="padding-top: 1rem">
                   <li class="nav-item">
-                    <a class="nav-link text-white" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" href="Menu.html" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: #6f3c08;">
+                      Menu
+                    </a>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="home.html" style="color: #6f3c08;">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#" style="color: #6f3c08;">Registration</a>
+                      </li>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="user-registration.html">Register</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="user-login.html">Login</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="products.html">Products</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="checkout.html" class="w3-bar-item w3-button"><i class="fa fa-shopping-cart" style="font-size:24px"></i></a>
                   </li>
                 </ul>
-                <form class="d-flex">
-                  <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-                  <!-- <button class="btn btn-outline-success" type="submit">Login</button> -->
-                </form>
               </div>
             </div>
           </nav>
     </header>
+    
     <main>
         <div class="container checkout">
             <div class="py-5 text-center">
                 <img class="d-block mx-auto mb-4" src="https://st4.depositphotos.com/17548386/24207/v/450/depositphotos_242079070-stock-illustration-cat-silhouette-holding-a-cup.jpg" alt="" width="72" height="72">
-                <h2>Purr & Pour Cafe</h2>
+                <h2>We hope everything went Purrfectly</h2>
                 <p class="lead">Sip, Purr, Love at Every Pour. </p>
             </div>
             <div class="row">
