--- a/Checkout.html
+++ b/Checkout.html
@@ -19,21 +19,22 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #ffffff;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html" style="color: #6f3c08;"; padding-left: 20px; padding-top: 1rem;">Purr & Pour Cafe</a>
+                <a class="navbar-brand" href="index.html" style="color: #6f3c08; ; padding-left: 20px; padding-top: 1rem";>Purr & Pour Cafe</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="padding-top: 1rem">
                   <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="home.html" style="color: #6f3c08;">Registration</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link active" href="Menu.html" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: #6f3c08;">
                       Menu
                     </a>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.html" style="color: #6f3c08;">Home</a>
-                      </li>
+                 
                       <li class="nav-item">
-                        <a class="nav-link" href="#" style="color: #6f3c08;">Registration</a>
+                        <a class="nav-link" href="Checkout.html" style="color: #6f3c08;">Checkout</a>
                       </li>
                   </li>
                   <li class="nav-item">
@@ -70,14 +71,14 @@
                                 <h6 class="my-0">Drinks</h6>
                                 <small class="text-muted">Iced Matcha Latte</small>
                             </div>
-                            <span class="text-muted">$8</span>
+                            <span class="text-muted">$6</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                             <div>
                                 <h6 class="my-0">Selected Cat(s)</h6>
                                 <small class="text-muted">Gnocchi</small>
                             </div>
-                            <span class="text-muted">$5</span>
+                            <span class="text-muted">$20</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between bg-light">
                             <div class="text-success">
