--- a/index.html
+++ b/index.html
@@ -2,48 +2,112 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+ 
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+ 
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/home.css" rel="stylesheet">
+
+    <title>Purr & Pour Cafe</title>
   </head>
-  <body>
-  
-<container>
-    <header>
-        <nav class="navbar navbar-expand-lg" style="background-color: #000000;">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#" style="color: #fff; padding-left: 20px; padding-top: 1rem;">Cat Cafe</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="padding-top: 1rem">
-                  
-                  <li class="nav-item">
-                    <a class="nav-link active" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: #fff;">
-                      Menu
-                    </a>
-                
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.html"style="color: white;">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#" style="color: #fff;">Registration</a>
-                      </li>
-                  </li>
-                  <li class="nav-item">
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+  <!--End of Head-->
+
+  <body class="text-center">
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+      </header>
+      <style>
+        body {
+          background-image: url('images/catbg.png');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }
+        </style>
+
+      <main role="main" class="scroll-container">
+        <section class="one" id="one">
+          <div class="hero">
+              <div class="hero-inner">
+                  <h1 class="hero-heading">Purr & Pour Cafe</h1>
+                  <h2>Where every sip includes a purr.</h2>
+                  <a href="Menu.html" class="btn">Get Started</a>
               </div>
-            </div>
-        </container>
-          </nav>
-    </header>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+              <div class="hero-right"></div>
+          </div>
+      </section>
+
+        <section class="two" id="two">
+          <div class="stuff">
+              <div class="who-am-i">
+                  <h1 class="heading intro">Welcome</h1>
+                  <hr>
+                  <p>
+                      This is my first ever eCommerce Website!<br>
+                      Hope you all enjoy this website<br>
+                      And are excited for what's more to come!<br>
+                      Thanks for visiting! <br>
+                  </p>
+                  <hr>
+                  <p>
+                    This site is all about drinks <br>
+                    and lap cats, in the menu are 'some' <br>
+                    of my cats as well as drinks that would <br> 
+                    go well with the experience!
+                  </p>
+                  <hr>
+                  List of 
+                  <ul>
+                    <li> Ice Skating </li>
+                    <li> Gaming </li>
+                    <li> Reading </li>
+                  </ul>
+              </div>
+          </div>
+      </section>
+      </main>
+<!--End of Main-->
+      <footer class="my-5 pt-5 text-muted text-center text-small">
+        <p class="mb-1">© 2024 Purr & Pour Cafe</p>
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="#">Privacy</a></li>
+            <li class="list-inline-item"><a href="#">Terms</a></li>
+            <li class="list-inline-item"><a href="#">Support</a></li>
+        </ul>
+    </div>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
   </body>
 </html>
