updated home page
added descriptions and lists

--- a/index.html
+++ b/index.html
@@ -76,16 +76,21 @@
                   <hr>
                   <p>
                     This site is all about drinks <br>
-                    and lap cats, in the menu are 'some' <br>
+                    and lap cats, in the menu, are some <br>
                     of my cats as well as drinks that would <br> 
                     go well with the experience!
                   </p>
                   <hr>
-                  List of 
+                  List of my cats:
                   <ul>
-                    <li> Ice Skating </li>
-                    <li> Gaming </li>
-                    <li> Reading </li>
+                    <li> Calcifer </li>
+                    <li> Haku </li>
+                    <li> Jiji </li>
+                    <li> Chihiro </li> </li>
+                    <li> Gnocchi </li>
+                    <br>
+                    <li> Mandu </li>
+                    <li> Kuni </li>
                   </ul>
               </div>
           </div>
@@ -94,7 +99,7 @@
 <!--End of Main-->
       <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">© 2024 Purr & Pour Cafe</p>
-        <ul class="list-inline">
+        <ul li class="list-inline">
             <li class="list-inline-item"><a href="#">Privacy</a></li>
             <li class="list-inline-item"><a href="#">Terms</a></li>
             <li class="list-inline-item"><a href="#">Support</a></li>
