--- a/Checkout.html
+++ b/Checkout.html
@@ -26,15 +26,15 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="padding-top: 1rem">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="home.html" style="color: #6f3c08;">Registration</a>
+                    <a class="nav-link active" aria-current="page" href="registration.html" style="color: #6f3c08;">Registration</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="Menu.html" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: #6f3c08;">
+                    <a class="nav-link active" href="menu.html" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: #6f3c08;">
                       Menu
                     </a>
                  
                       <li class="nav-item">
-                        <a class="nav-link" href="Checkout.html" style="color: #6f3c08;">Checkout</a>
+                        <a class="nav-link" href="checkout.html" style="color: #6f3c08;">Checkout</a>
                       </li>
                   </li>
                   <li class="nav-item">
