--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <div class="hero-inner">
                   <h1 class="hero-heading">Purr & Pour Cafe</h1>
                   <h2>Where every sip includes a purr.</h2>
-                  <a href="Menu.html" class="btn">Get Started</a>
+                  <a href="menu.html" class="btn">Get Started</a>
               </div>
               <div class="hero-right"></div>
           </div>
