--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <p>
                     This site is all about drinks <br>
                     and lap cats, in the menu, are some <br>
-                    of my cats as well as drinks that would <br> 
+                    of my cats to be with as well as drinks that would <br> 
                     go well with the experience!
                   </p>
                   <hr>
