removed stray files and fixed closed elements
went through each html and cleaned up errors on elements

--- a/Checkout.html
+++ b/Checkout.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
     <title>Purr & Pour Cafe</title>
   </head>
 
@@ -19,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: #ffffff;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html" style="color: #6f3c08; ; padding-left: 20px; padding-top: 1rem";>Purr & Pour Cafe</a>
+                <a class="navbar-brand" href="index.html" style="color: #6f3c08; ; padding-left: 20px; padding-top: 1rem">Purr & Pour Cafe</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -36,7 +35,6 @@
                       <li class="nav-item">
                         <a class="nav-link" href="checkout.html" style="color: #6f3c08;">Checkout</a>
                       </li>
-                  </li>
                   <li class="nav-item">
                   </li>
                 </ul>
@@ -45,7 +43,7 @@
           </nav>
     </header>
     
-    <main>
+     <main> 
         <div class="container checkout">
             <div class="py-5 text-center">
                 <img class="d-block mx-auto mb-4" src="https://st4.depositphotos.com/17548386/24207/v/450/depositphotos_242079070-stock-illustration-cat-silhouette-holding-a-cup.jpg" alt="" width="72" height="72">
