--- a/Menu.html
+++ b/Menu.html
@@ -8,11 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-<container>
     <header>
       <nav class="navbar navbar-expand-lg" style="background-color: #ffffff;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html" style="color: #6f3c08; ; padding-left: 20px; padding-top: 1rem";>Purr & Pour Cafe</a>
+            <a class="navbar-brand" href="index.html" style="color: #6f3c08; ; padding-left: 20px; padding-top: 1rem">Purr & Pour Cafe</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,7 +28,6 @@
                   <li class="nav-item">
                     <a class="nav-link" href="checkout.html" style="color: #6f3c08;">Checkout</a>
                   </li>
-              </li>
               <li class="nav-item">
               </li>
             </ul>
@@ -83,7 +81,7 @@
                 <a href="#">$6</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>ADD TO CART</a>
               </div>
             </div>
-            <img src="images/milk.png" alt=""height="350" width="300" class="animated fadeInRight">
+            <img src="images/milk.png" alt="" height="350" width="300" class="animated fadeInRight">
           </div>
     
           <div class="outer">
@@ -110,12 +108,13 @@
         </div>
 
         <footer class="my-5 pt-5 text-muted text-center text-small justify-content-between>
-          p class="mb-1>© 2024 Purr & Pour Cafe</p>
+          ">© 2024 Purr & Pour Cafe
           <ul class="list-inline">
               <li class="list-inline-item"><a href="#">Privacy</a></li>
               <li class="list-inline-item"><a href="#">Terms</a></li>
               <li class="list-inline-item"><a href="#">Support</a></li>
           </ul>
+          </footer>
     </main>
   </body>
 </html>
