--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
  
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -28,29 +26,26 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
 
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/home.css" rel="stylesheet">
 
     <title>Purr & Pour Cafe</title>
+    <style>
+      body {
+        background-image: url('images/catbg.png');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+      </style>
   </head>
   <!--End of Head-->
-
   <body class="text-center">
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
       </header>
-      <style>
-        body {
-          background-image: url('images/catbg.png');
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-          background-size: cover;
-        }
-        </style>
-
-      <main role="main" class="scroll-container">
+      <div class="cover-container d-flex h-100 p-3 mx-auto flex-column"></div>
+      <main class="scroll-container">
         <section class="one" id="one">
           <div class="hero">
               <div class="hero-inner">
@@ -59,8 +54,8 @@
                   <a href="menu.html" class="btn">Get Started</a>
               </div>
               <div class="hero-right"></div>
-          </div>
-      </section>
+    </div>
+        </section>
 
         <section class="two" id="two">
           <div class="stuff">
@@ -86,9 +81,8 @@
                     <li> Calcifer </li>
                     <li> Haku </li>
                     <li> Jiji </li>
-                    <li> Chihiro </li> </li>
+                    <li> Chihiro </li>
                     <li> Gnocchi </li>
-                    
                     <li> Mandu </li>
                     <li> Kuni </li>
                   </ul>
@@ -99,20 +93,16 @@
 <!--End of Main-->
       <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">© 2024 Purr & Pour Cafe</p>
-        <ul li class="list-inline">
+        <ul class="list-inline">
             <li class="list-inline-item"><a href="#">Privacy</a></li>
             <li class="list-inline-item"><a href="#">Terms</a></li>
             <li class="list-inline-item"><a href="#">Support</a></li>
         </ul>
-    </div>
-
+        </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-  </body>
 </html>
