added comments throughout

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
 
-    <!-- Bootstrap core CSS -->
+    <!-- Removed some core css as it was malfunctioning the website -->
 
     <!-- Custom styles for this template -->
     <link href="css/home.css" rel="stylesheet">
