--- a/login.html
+++ b/login.html
@@ -19,6 +19,7 @@
     <link href="css/login.css" rel="stylesheet">
   </head>
     
+  <!--Utilized form for sign in-->
   <body class="text-center" style="background-color:#947b65;">
     <form class="form-signin">
       <img class="mb-4" src="https://st4.depositphotos.com/17548386/24207/v/450/depositphotos_242079070-stock-illustration-cat-silhouette-holding-a-cup.jpg" alt="" width="72" height="72">
