--- a/registration.html
+++ b/registration.html
@@ -109,7 +109,7 @@
               
                             <div class="row">
                               <div class="col-12">
-
+                                <!--Used same format for previous radio set-->
                                 <label class="form-label" for="phoneNumber">How did you hear about us?</label><br>
                               
                                 <div class="form-check form-check-inline">
